<resources>
    <string name="app_name">LearnFragment</string>
    <string name="showAnotherFragment">显示另一个Fragment</string>
    <string name="mainfragment">MainFragment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">为布局添加动画效果  ----  </string>
    <string name="backMainFragment">返回前一个fragment</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="showDrawerActivity">启动有侧边栏的Activity</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="showTabActivity">启动Tab Activity</string>
    <string name="animtionSet">动画组合</string>
    <string name="addButton">添加Button</string>

</resources>
