<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainFragment">

    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mainfragment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <Button
        android:id="@+id/showAnotherFragment"
        android:text="@string/showAnotherFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        />
    <Button
        android:id="@+id/showDrawerActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/showDrawerActivity"
        app:layout_constraintStart_toStartOf="@id/showAnotherFragment"
        app:layout_constraintEnd_toEndOf="@id/showAnotherFragment"
        app:layout_constraintTop_toBottomOf="@id/showAnotherFragment"
        android:layout_marginTop="20dp"
        />
    <Button
        android:id="@+id/showTabActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/showTabActivity"
        app:layout_constraintStart_toStartOf="@id/showAnotherFragment"
        app:layout_constraintEnd_toEndOf="@id/showAnotherFragment"
        app:layout_constraintTop_toBottomOf="@id/showDrawerActivity"
        android:layout_marginTop="20dp"
        />
    <TextView
        android:id="@+id/animSet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/animtionSet"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/message"
        app:layout_constraintRight_toRightOf="@+id/message"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/message"

        />
    <Button
        android:id="@+id/onValueAnimator"
        android:text="value Animator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/animSet"
        android:background="@drawable/bg_btn_normal"

         />
    <!--<ScrollView-->
        <!--android:layout_width="match_parent"-->
        <!--app:layout_constraintTop_toBottomOf="@id/onValueAnimator"-->
        <!--android:layout_height="200dp">-->

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            app:layout_constraintTop_toBottomOf="@id/onValueAnimator"
            android:scrollbars="vertical"
            android:text="Destroying surface Surface(name=Starting com.example.elly.learnfragment) called by com.android.server.wm.WindowStateAnimator.destroySurface:2016 com.android.server.wm.WindowStateAnimator.destroySurfaceLocked:882 com.android.server.wm.WindowState.destroyOrSaveSurface:2100 com.android.server.wm.AppWindowToken.destroySurfaces:363 com.android.server.wm.WindowStateAnimator.finishExit:565 com.android.server.wm.WindowStateAnimator.stepAnimationLocked:491 com.android.server.wm.WindowAnimator.updateWindowsLocked:303 com.android.server.wm.WindowAnimator.animateLocked:704 "
            />
    <!--</ScrollView>-->
</android.support.constraint.ConstraintLayout>
